# slambox

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
conan_recipes/symforce/: conanfile.py
include/: slam.h
src/: main.cpp  slam.cpp
tests/: CMakeLists.txt  dummy_test.cpp
tools/: activate-dev-env.sh  symforce.ipynb
